--- a/packages/nodelabs_ui/pubspec.yaml
+++ b/packages/nodelabs_ui/pubspec.yaml
@@ -1,31 +1,22 @@
-name: nodelabs_case_study
+name: nodelabs_ui
 description: A Very Good Project created by Very Good CLI.
-version: 1.0.0+1
+version: 0.1.0+1
 publish_to: none
 
 environment:
   sdk: ^3.5.0
+  flutter: ^3.24.0
 
 dependencies:
-  bloc: ^8.1.4
+  build_runner: ^2.4.15
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.6
-  flutter_localizations:
-    sdk: flutter
-  go_router: ^16.0.0
-  intl: ^0.19.0
-  nodelabs_ui:
-    path: packages/nodelabs_ui
+  flutter_gen_runner: ^5.7.0
+  flutter_svg: ^2.2.0
 
 dev_dependencies:
-  bloc_test: ^9.1.7
-  build_runner: ^2.4.15
-  build_verify: ^3.1.1
-  flutter_gen_runner: ^5.7.0
   flutter_test:
     sdk: flutter
-  go_router_builder: ^3.0.1
   mocktail: ^1.0.4
   very_good_analysis: ^6.0.0
 
