invalid credentials error handling

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,11 @@ environment:
   sdk: ^3.5.0
 
 dependencies:
+  auth_repository:
+    path: packages/auth_repository
   bloc: ^8.1.4
   collection: ^1.19.1
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
