--- a/packages/hive_client/pubspec.yaml
+++ b/packages/hive_client/pubspec.yaml
@@ -1,4 +1,4 @@
-name: cache_repository
+name: hive_client
 description: A Very Good Project created by Very Good CLI.
 version: 0.1.0+1
 publish_to: none
@@ -8,11 +8,10 @@ environment:
   flutter: ^3.24.0
 
 dependencies:
-  equatable: ^2.0.7
   flutter:
     sdk: flutter
-  hive_client:
-    path: ../hive_client
+  hive: ^2.2.3
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
