--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   auth_repository:
     path: packages/auth_repository
   bloc: ^8.1.4
+  cache_repository:
+    path: packages/cache_repository
   collection: ^1.19.1
   equatable: ^2.0.7
   flutter:
