--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   bloc: ^8.1.4
   cache_repository:
     path: packages/cache_repository
+  cached_network_image: ^3.4.1
   collection: ^1.19.1
   equatable: ^2.0.7
   flutter:
@@ -21,6 +22,8 @@ dependencies:
     sdk: flutter
   go_router: ^16.0.0
   intl: ^0.19.0
+  movie_repository:
+    path: packages/movie_repository
   nodelabs_ui:
     path: packages/nodelabs_ui
   slang: ^4.7.3
