--- a/packages/movie_repository/pubspec.yaml
+++ b/packages/movie_repository/pubspec.yaml
@@ -10,10 +10,12 @@ environment:
 dependencies:
   api_client:
     path: ../api_client
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
+  rxdart: ^0.28.0
 
 dev_dependencies:
   build_runner: ^2.5.4
