--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cached_network_image: ^3.4.1
   collection: ^1.19.1
   equatable: ^2.0.7
+  external_media_repository:
+    path: packages/external_media_repository
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
