--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dev_dependencies:
   build_runner: ^2.4.15
   build_verify: ^3.1.1
   flutter_gen_runner: ^5.7.0
+  flutter_launcher_icons: ^0.14.4
   flutter_native_splash: ^2.4.6
   flutter_test:
     sdk: flutter
@@ -68,3 +69,8 @@ flutter_native_splash:
   fullscreen: true
   android: true
   ios: true
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: assets/images/SinFlixLogo.png
